<resources>
    <string name="HIPS_Action_Accept">Allow</string>
    <string name="HIPS_Action_Prompt">Ask</string>
    <string name="HIPS_Action_Reject">Deny</string>
    <string name="HIPS_Action_Accept_Colored">&lt;font color=#478800>Allow&lt;/font></string>
    <string name="HIPS_Action_Prompt_Colored">&lt;font color=#FF8A00>Ask&lt;/font></string>
    <string name="HIPS_Action_Reject_Colored">&lt;font color=#DF0000>Deny&lt;/font></string>
    <string name="HIPS_Group_Expense">"Security Related "</string>
    <string name="HIPS_Group_PIM">Personal information</string>
    <string name="Battery_SavingMode">PS Modes</string>
    <string name="Battery_NightSavingMode">NTPS Mode Switch</string>
    <string name="Battery_Mode_BatteryCheckBoxWifi">WiFi</string>
    <string name="Battery_Mode_BatteryCheckBoxAutoData">Data</string>
    <string name="Battery_Mode_BatteryCheckBoxSync">Sync</string>
    <string name="Battery_Mode_BatteryCheckBoxAir">Airplane</string>
    <string name="Battery_Mode_BatteryCheckBoxBluetooth">Bluetooth</string>
    <string name="Battery_Mode_BatteryCheckBoxVibration">Haptic</string>
    <string name="Battery_Mode_BatteryModeName">Mode Name</string>
    <string name="Battery_Mode_BatteryModeNameNull">No mode name</string>
    <string name="Battery_Mode_BatteryModeTips">Mode Description</string>
    <string name="Battery_Mode_BatteryModeTipsNull">No mode description</string>
    <string name="Battery_Mode_ScreenPreference">Screen</string>
    <string name="Battery_NightSaving_ResumeMode">After the end of recovery for the</string>
    <string name="Battery_NigthSaving_NightSaveMode_Setting">NTPS Mode Settings</string>
    <string name="Battery_Scene_Repeat">Repeat</string>
    <string name="Desktop_Homekey_Launch">Launch by Home key</string>
    <string name="Desktop_Homekey_Launch_Disable">Disable launch by Home key</string>
    <string name="Desktop_Longsearch_Launch">Launch by holding Search button</string>
    <string name="Desktop_Float_Window_Settings">Desktop floating window settings</string>
    <string name="Desktop_Float_Window_Enable">Open floating window</string>
    <string name="Desktop_Float_Window_Show_Just_When_Desktop">Only show on desktop</string>
    <string name="Generic_Service_Enabled">Service is turned on</string>
    <string name="Generic_Service_Disabled">Service is turned off</string>
    <string name="Generic_Summary_Enabled">Enabled</string>
    <string name="Generic_Summary_Disabled">Disabled</string>
    <string name="Generic_Enable">Enable</string>
    <string name="Generic_Disable">Disable</string>
    <string name="Generic_Enabled">Enabled</string>
    <string name="Generic_Disabled">Disabled</string>
    <string name="Traffic_Monitor_Discount">Traffic 50%-off hours</string>
    <string name="Traffic_Monitor_Discount_Start">Start time</string>
    <string name="Traffic_Monitor_Discount_End">End time</string>
    <string name="Traffic_Monitor_DataPlan_Unlimited">Not set</string>
    <string name="Phone_Block_Blackwhitelist">B&amp;W Lists</string>
    <string name="Phone_BlockType">Blocking Mode</string>
    <string name="Phone_Data_Upload_Title">Cloud security services</string>
    <string name="Phone_Custom_Blacklist">Blacklist</string>
    <string name="Phone_Custom_Whitelist">Whitelist</string>
    <string name="Phone_Custom_KeyWord">Keywords</string>
    <string name="Phone_MIUI_Helper">SMS interception Help (applicable MIUI user)</string>
    <string name="Phone_MIUI_Help_Title">MIUI user SMS interception setup instructions</string>
    <string name="Phone_SupperSetting">Advanced Settings</string>
    <string name="Phone_Alert_AddTo_Black">Prompt to add to blacklist</string>
    <string name="Phone_BlockLog_Save_Time">Records for blocked will be kept for</string>
    <string name="Phone_BlockOneRing">Block short-ring calls</string>
    <string name="Phone_BlockSetting">Block Settings</string>
    <string name="Pref_Main_HIPS_Service">Proactive Defense service</string>
    <string name="Pref_Main_Phone_Service">Communication firewall service</string>
    <string name="Pref_Main_Traffic_Service">Traffic monitoring service</string>
    <string name="Pref_Main_Cat_Shortcut">Desktop shortcut</string>
    <string name="Pref_Main_CleanShortcut">Add One-Click-Cleanup shortcut</string>
    <string name="Pref_Main_CleanShortcut_Summary">Cleans up memory with one click</string>
    <string name="Pref_HIPS_Forge_SendReport">Always report SMS sent successfully</string>
    <string name="Pref_HIPS_Record_Event">Show security events in notification bar</string>
    <string name="Pref_HIPS_Record_Telephony">Outgoing SMS and call records</string>
    <string name="Pref_Phone_Block_Method">"Blocked callers hear you… (Non-'Busy' ones may charge outside China!)"</string>
    <string name="Pref_Phone_Block_Occur_Error">Intercept error description</string>
    <string name="Pref_Phone_Block_Occur_Error_Desc">When all incoming calls when you can not refer to this method</string>
    <string name="Pref_Phone_Cat_Night">Nighttime DND Settings</string>
    <string name="Pref_Phone_NightMode">Nighttime Do-Not-Disturb Mode</string>
    <string name="Pref_Phone_NightMode_BeginTime">Set start time</string>
    <string name="Pref_Phone_NightMode_EndTime">Set end time</string>
    <string name="Pref_Phone_Data_Upload_Summary">To help LBE Security Master improve the accuracy interception</string>
    <string name="Pref_Saving_AutoSave">Enter power-saving mode automatically when battery is low</string>
    <string name="Pref_Saving_Cat_Config">Power saving mode energy saving settings</string>
    <string name="Pref_Saving_Screen">Screen settings</string>
    <string name="Pref_Saving_Screen_Summary">Brightness and screen-off time in power-saving mode</string>
    <string name="Pref_Saving_BT">Turn off Bluetooth</string>
    <string name="Pref_Saving_BT_SummaryOn">Bluetooth off in power-saving mode</string>
    <string name="Pref_Saving_BT_SummaryOff">Bluetooth no change in power-saving mode</string>
    <string name="Pref_Saving_WIFI">Turn off WiFi</string>
    <string name="Pref_Saving_WIFI_SummaryOn">WiFi off in power-saving mode</string>
    <string name="Pref_Saving_WIFI_SummaryOff">WiFi no change in power-saving mode</string>
    <string name="Pref_Saving_Data">Turn off 2G/3G data connection</string>
    <string name="Pref_Saving_Data_SummaryOn">2G/3G data off in power-saving mode</string>
    <string name="Pref_Saving_Data_SummaryOff">2G/3G data no change in power-saving mode</string>
    <string name="Pref_Saving_AutoSync">Turn off sync</string>
    <string name="Pref_Saving_AutoSync_SummaryOn">All background syncs disallowed</string>
    <string name="Pref_Saving_AutoSync_SummaryOff">All background syncs allowed</string>
    <string name="Pref_Saving_Vibration">Turn off haptic feedback</string>
    <string name="Pref_Saving_Vibration_SummaryOn">Haptic feedback off in power-saving mode</string>
    <string name="Pref_Saving_Vibration_SummaryOff">Haptic feedback no change in power-saving mode</string>
    <string name="Pref_NightSaving_Cat_Config">Energy-saving setting power saving mode at night</string>
    <string name="Pref_NightSaving_BeginTime">Nighttime power-saving mode on time</string>
    <string name="Pref_NightSaving_EndTime">Nighttime power-saving mode off time</string>
    <string name="Pref_NightSaving_Screen_Summary">Screen brightness and screen-off time in nighttime power-saving mode</string>
    <string name="Pref_NightSaving_Airplane">Turn on airplane mode</string>
    <string name="Pref_NightSaving_Airplane_SummaryOn">Airplane mode on in nighttime power-saving mode</string>
    <string name="Pref_NightSaving_Airplane_SummaryOff">Airplane mode no change in nighttime power-saving mode</string>
    <string name="Pref_NightSaving_BT_SummaryOn">Bluetooth off in nighttime power-saving mode</string>
    <string name="Pref_NightSaving_BT_SummaryOff">Bluetooth no change in nighttime power-saving mode</string>
    <string name="Pref_NightSaving_WIFI_SummaryOn">WiFi off in nighttime power-saving mode</string>
    <string name="Pref_NightSaving_WIFI_SummaryOff">Wifi no change in nighttime power-saving mode</string>
    <string name="Pref_NightSaving_Data_SummaryOn">2G/3G Data off in nighttime power-saving mode</string>
    <string name="Pref_NightSaving_Data_SummaryOff">2G/3G Data no change in nighttime power-saving mode</string>
    <string name="Pref_NightSaving_AutoSync_SummaryOn">All background syncs disallowed in nighttime power-saving mode</string>
    <string name="Pref_NightSaving_AutoSync_SummaryOff">All background syncs allowed in nighttime power-saving mode</string>
    <string name="Pref_NightSaving_Vibration_SummaryOn">Haptic feedback off in nighttime power-saving mode</string>
    <string name="Pref_NightSaving_Vibration_SummaryOff">Haptic feedback no change in nighttime power-saving mode</string>
    <string name="Pref_Traffic_BillingDay">Billing Day</string>
    <string name="Pref_Traffic_BillingDay_Summary">Billing starts from day %s of each month</string>
    <string name="Pref_Traffic_Alarm">Traffic Warning</string>
    <string name="Pref_Traffic_Alarm_Summary">Warn me on traffic exceeding 90% of monthly plan</string>
    <string name="Pref_Traffic_Auto_Close">Automatically turn off mobile data</string>
    <string name="Pref_Traffic_Auto_Close_Summary">Automatically turn off moble data on traffic exceeding monthly plan</string>
    <string name="Pref_Traffic_FloatWindow">Show traffic box</string>
    <string name="Pref_Traffic_FloatWindow_Style">Traffic box style</string>
    <string name="Pref_Traffic_FloatWindow_Fixed">Lock traffic box position</string>
    <string name="Pref_Traffic_FloatWindow_On_Statusbar">Lock traffic box to status bar</string>
    <string name="Pref_Traffic_FloatWindow_NoFocus">Traffic box cannot be tapped if locked</string>
    <string name="Pref_Traffic_FloatWindow_Refresh">Traffic box refreshing rate</string>
    <string name="Pref_Traffic_FloatWindow_Refresh_Summary">Higher refreshing rate improves accuracy but leads to more battery consumption</string>
    <string name="Pref_Traffic_FloatWindow_AutoDim">Auto-hide traffic box</string>
    <string name="Pref_Traffic_FloatWindow_AutoDim_Summary">Automatically hide the traffic box if no more traffic consumed in a period of time</string>
    <string name="Pref_Traffic_DataPlan">Set your data plan</string>
    <string name="Pref_Traffic_Adjust">Adjust traffic consumed this month</string>
    <string name="Pref_Traffic_Clean">Reset traffic data</string>
    <string name="Pref_Traffic_OnTime_Update_Setting">Traffic Auto-Calibration (Invalid outside China)</string>
    <string name="Pref_Traffic_Operator_Setting">Operator Settings</string>
    <string name="Pref_Shortcut_Preferred_Launcher">Preferred Launcher</string>
    <string name="Pref_LBE_Shortcut">LBE Quick Toggles</string>
    <string name="Pref_Shortcut_Notification">Launch Mode</string>
    <string name="private_update_password">Change private comm. passoword</string>
    <string name="private_open_fake_ui_summary">A fake interface protecting the true privacy, in case someone demands to check your private space.</string>
    <string name="private_setfalseui_password">Set password into fake interface</string>
    <string name="private_newmessage_notification_type">Notification for new SMS</string>
    <string name="private_newmessage_notification">Notification for new SMS</string>
    <string name="private_message_ring">Private SMS tone</string>
    <string name="private_message_icon">Private SMS notification icon</string>
    <string name="private_call_icon">Private call notification icon</string>
    <string name="private_notification_text">Text in notification bar</string>
    <string name="private_newmessage_vibrate">Vibrate on new SMS</string>
    <string name="private_click_change">Tap to change</string>
    <string name="private_password_set">Set password</string>
</resources>